# armbian-imager

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml  maintenance-release.yml  pr-check.yml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  decompress.rs  download.rs  main.rs
src-tauri/src/commands/: board_queries.rs  custom_image.rs  image_cache.rs  mod.rs  operations.rs  progress.rs  scraping.rs  settings.rs  system.rs
src-tauri/src/config/: mod.rs
src-tauri/src/devices/: linux.rs  macos.rs  windows.rs
src-tauri/src/flash/: mod.rs  verify.rs  windows.rs
src-tauri/src/flash/linux/: writer.rs
src-tauri/src/flash/macos/: authorization.rs  writer.rs
src-tauri/src/images/: filters.rs  mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/paste/: mod.rs  upload.rs
src-tauri/src/utils/: http.rs  system.rs
src/assets/os-logos/: index.ts
src/components/: BoardModal.tsx  DeviceModal.tsx  Header.tsx  HomePage.tsx  ImageModal.tsx  ManufacturerModal.tsx  Modal.tsx
src/components/FlashProgress/: FlashActions.tsx  FlashStageIcon.tsx  index.tsx
src/components/flash/: FlashProgress.tsx  FlashStageIcon.tsx
src/components/modals/: BoardModal.tsx  DeviceModal.tsx  ImageModal.tsx  ManufacturerModal.tsx
src/components/settings/: AdvancedSection.tsx  GeneralSection.tsx  LogsModal.tsx
src/components/shared/: ConfirmationDialog.tsx  ErrorDisplay.tsx  MarqueeText.tsx  MotdTip.tsx  SearchBox.tsx  SkeletonCard.tsx  UpdateModal.tsx
src/config/: constants.ts  i18n.ts  index.ts  manufacturers.ts
src/hooks/: useSettings.ts  useTauri.ts  useVendorLogos.ts
src/locales/: de.json  en.json  es.json  fr.json  hr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sl.json  sv.json  tr.json  uk.json  zh.json
src/styles/: components.css  flash.css  modal.css
src/types/: index.ts
src/utils/: index.ts
