[package]
name = "armbian-imager"
version = "1.0.0"
description = "Armbian Imager - Flash Armbian OS images to SD cards and USB drives"
authors = ["Armbian", "SuperKali <hello@superkali.me>"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
xz2 = "0.1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
once_cell = "1.21.3"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies for block device access

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies
libc = "0.2"
security-framework = "2.11"
security-framework-sys = "2.11"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
