[package]
name = "armbian-imager"
version = "1.0.0"
description = "Armbian Imager - Flash Armbian OS images to SD cards and USB drives"
authors = ["Armbian", "SuperKali <hello@superkali.me>"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
# Multi-threaded decompression libraries
lzma-rust2 = { version = "0.15", features = ["xz", "std"] }
bzip2 = "0.4"
flate2 = "1.0"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
once_cell = "1.21.3"
chrono = "0.4"
sys-locale = "0.3"
filetime = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies for block device access
libc = "0.2"
# UDisks2 for privilege escalation via polkit
udisks2 = "0.3"
# Pin zbus to 5.12 to avoid breaking changes in 5.13+ (Rust 2024 edition)
zbus = "=5.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies
libc = "0.2"
security-framework = "2.11"
security-framework-sys = "2.11"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
